--- a/MC-Dex/itemUC.xaml
+++ b/MC-Dex/itemUC.xaml
@@ -5,16 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MC_Dex"
              mc:Ignorable="d" 
-             d:DesignHeight="70" d:DesignWidth="400" Foreground="{x:Null}">
+             d:DesignHeight="80" d:DesignWidth="220" Foreground="{x:Null}">
 
-    <Grid Background="#BA0E0D0D">
+    <Border CornerRadius="12" BorderThickness="5" Background="#BA0E0D0D" Height="80" Width="220" Margin="3">
+    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <Image Grid.Column="0" Source="/img/Terre.webp" MaxHeight="50" MaxWidth="50" Margin="25,10"/>
-        <TextBlock Grid.Column="1" Text="Terre" Foreground="White" VerticalAlignment="Center" FontSize="55"/>
-
+            <Image Grid.Column="0" Source="C:\Users\justi\source\repos\mc-dex\MC-Dex\img\Terre.webp" Height="50" Width="50" Margin="20,1"/>
+        <TextBlock Grid.Column="1" Text="Terre" Foreground="White" FontSize="40" VerticalAlignment="Center"/>
     </Grid>
+    </Border>
 
 </UserControl>
