--- a/MC-Dex/itemUC.xaml
+++ b/MC-Dex/itemUC.xaml
@@ -13,9 +13,9 @@
             <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-            <Image Grid.Column="0" Source="C:\Users\justi\source\repos\mc-dex\MC-Dex\img\Terre.webp" Height="50" Width="50" Margin="20,1"/>
-        <TextBlock Grid.Column="1" Text="Terre" Foreground="White" FontSize="40" VerticalAlignment="Center"/>
-    </Grid>
+            <Image Grid.Column="0" Source="C:\Users\justi\source\repos\mc-dex\MC-Dex\img\bloc_terre.png" Height="50" Width="50" Margin="20,1"/>
+            <TextBlock Grid.Column="1" Text="Terre" FontFamily="Minecraft" Foreground="White" FontSize="25" VerticalAlignment="Center" TextWrapping="Wrap"/>
+        </Grid>
     </Border>
 
 </UserControl>
