--- a/MC-Dex/MainWindow.xaml
+++ b/MC-Dex/MainWindow.xaml
@@ -1,60 +1,27 @@
 ﻿<Window x:Class="MC_Dex.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MC_Dex"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    
+    
     <DockPanel>
         <DockPanel.Background>
             <ImageBrush ImageSource="/img/background.png"/>
         </DockPanel.Background>
 
-        
+
         <local:menuUC DockPanel.Dock="Top" Loaded="menuUC_Loaded"/>
+        
+
+        <local:home DockPanel.Dock="Bottom"></local:home>
 
 
-        <ScrollViewer>
-            <WrapPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="0,0,0,0" HorizontalAlignment="Center">
-                <local:itemUC Loaded="itemUC_Loaded"/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-                <local:itemUC/>
-            </WrapPanel>
-        </ScrollViewer>
+
+
 
     </DockPanel>
 </Window>
