--- a/MC-Dex/MainWindow.xaml
+++ b/MC-Dex/MainWindow.xaml
@@ -17,7 +17,8 @@
         <local:menuUC DockPanel.Dock="Top" Loaded="menuUC_Loaded"/>
         
 
-        <local:home DockPanel.Dock="Bottom" Loaded="home_Loaded"></local:home>
+        <!--<local:home DockPanel.Dock="Bottom" Loaded="home_Loaded"></local:home>-->
+        <local:pageAjouter/>
 
 
 
