--- a/MC-Dex/home.xaml
+++ b/MC-Dex/home.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
-    <ScrollViewer>
+    <ScrollViewer VerticalScrollBarVisibility="Hidden">
         <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <local:itemUC/>
             <local:itemUC/>
