--- a/MC-Dex/menuUC.xaml
+++ b/MC-Dex/menuUC.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid Height="125">
+    
+    <Grid MaxHeight="125">
         <Grid.Background>
             <ImageBrush ImageSource="img\texture_grass.png" Stretch="UniformToFill" />
         </Grid.Background>
@@ -19,14 +20,29 @@
         </Grid.ColumnDefinitions>
         <Grid.Resources>
             <Style TargetType="Image">
-                <Setter Property="VerticalAlignment" Value="Center"/>
-                <Setter Property="Margin" Value="0,0,0,20"/>
+                <Setter Property="VerticalAlignment" Value="Bottom"/>
+                <Setter Property="Margin" Value="0,0,0,0"/>
+            </Style>
 
+            <Style TargetType="Button">
+                <Setter Property="Background" Value="{x:Null}"/>
+                <Setter Property="BorderThickness" Value="0"/>
+                <Setter Property="Height" Value="100"/>
+                <Setter Property="VerticalAlignment" Value="Top"/>
             </Style>
         </Grid.Resources>
-        <Image Source="img\logo.png" Width="180" Margin="-25,0,0,20" Grid.Column="0"/>
-        <Image Source="img\MC-Dex.png" Width="250" Grid.Column="1"/>
-        <Image Width="100" Source="img\ajouter.png" Grid.Column="2"/>
-        <Image Source="img\loupe.png" Width="80" Grid.Column="3"/>
+        
+        <Button Grid.Column="0">
+            <Image Source="img\logo.png" Width="180" Margin="-25,0,0,10" />
+        </Button>
+        <Button Grid.Column="1" Width="270">
+            <Image Source="img\MC-Dex.png" Width="250" />
+        </Button>
+        <Button Grid.Column="2">
+            <Image Width="100" Source="img\ajouter.png" />
+        </Button>
+        <Button  Grid.Column="3">
+            <Image Source="img\loupe.png" Width="80"/>
+        </Button>
     </Grid>
 </UserControl>
