--- a/MC-Dex/pageObjet.xaml
+++ b/MC-Dex/pageObjet.xaml
@@ -32,38 +32,37 @@
     </UserControl.Resources>
 
     <DockPanel>
+
+
         <local:home DockPanel.Dock="Right" Width="250" Margin="0,12"/>
+
+        <Border CornerRadius="12" Background="#BA0E0D0D" Margin="40,20,0,20" DockPanel.Dock="Left">
+            <StackPanel >
+                <Grid Margin="20">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+
+                    <Image Grid.Column="0" Grid.RowSpan="2" Grid.Row="0" Source="img\bloc_terre.png" Height="110" Width="110" Margin="0,0,20,0"/>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Terre" FontSize="40"/>
+                    <TextBlock Grid.Column="1" Grid.Row="1" Text="Dirt"  FontSize="35" Foreground="#FF979797"/>
+                    <TextBlock Grid.Column="2" Grid.Row="0" Text="Identifiant"  FontSize="22"/>
+                </Grid>
+
+                <Rectangle Width="Auto" Height="2" Fill="White" Margin="15,5"/>
+
+                <TextBlock Text="Description" Style="{StaticResource titre_partie}"/>
+                <TextBlock Style="{StaticResource texte_partie}" Text="Voici un exemple de description type qu'il pourrait y avoir."/>
+
+            </StackPanel>
+        </Border>
         
-    <Border CornerRadius="12" Background="#BA0E0D0D" Margin="40,20,0,20">
-
-
-            <StackPanel DockPanel.Dock="Left">
-            <Grid Margin="20">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-
-                <Image Grid.Column="0" Grid.RowSpan="2" Grid.Row="0" Source="img\bloc_terre.png" Height="110" Width="110" Margin="0,0,20,0"/>
-                <TextBlock Grid.Column="1" Grid.Row="0" Text="Terre" FontSize="40"/>
-                <TextBlock Grid.Column="1" Grid.Row="1" Text="Dirt"  FontSize="35" Foreground="#FF979797"/>
-                <TextBlock Grid.Column="2" Grid.Row="0" Text="Identifiant"  FontSize="22"/>
-            </Grid>
-            
-            <Rectangle Width="Auto" Height="2" Fill="White" Margin="15,5"/>
-            
-            <TextBlock Text="Description" Style="{StaticResource titre_partie}"/>
-            <TextBlock Style="{StaticResource texte_partie}" Text="Voici un exemple de description type qu'il pourrait y avoir."/>
-            
-        </StackPanel>
-
-            
-    </Border>
     </DockPanel>
     
     
