--- a/MC-Dex/pageObjet.xaml
+++ b/MC-Dex/pageObjet.xaml
@@ -49,7 +49,7 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <Image Grid.Column="0" Grid.RowSpan="2" Grid.Row="0" Source="img\bloc_terre.png" Height="110" Width="110" Margin="0,0,20,0"/>
+                    <Image Grid.Column="0" Grid.RowSpan="2" Grid.Row="0" Source="img\Terre.png" Height="110" Width="110" Margin="0,0,20,0"/>
                     <TextBlock Grid.Column="1" Grid.Row="0" Text="Terre" FontSize="40"/>
                     <TextBlock Grid.Column="1" Grid.Row="1" Text="Dirt"  FontSize="35" Foreground="#FF979797"/>
                     <TextBlock Grid.Column="2" Grid.Row="0" Text="Identifiant"  FontSize="22"/>
