--- a/MC-Dex/craftUC.xaml
+++ b/MC-Dex/craftUC.xaml
@@ -6,53 +6,61 @@
              xmlns:local="clr-namespace:MC_Dex"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Background="#C3C3C3" Orientation="Horizontal">
-        <Grid Background="#8A8A8A" VerticalAlignment="Center">
-            <Grid.Resources>
-                <SolidColorBrush x:Key="brush" Color="#C5C5C5"/>
-                <Style TargetType="Image">
-                    <Setter Property="Width" Value="70"/>
-                </Style>
-            </Grid.Resources>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="80"/>
-                <ColumnDefinition Width="80"/>
-                <ColumnDefinition Width="80"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-            </Grid.RowDefinitions>
-            <Border Grid.Column="0" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                <Image Source="img\Terre.png"/>
-            </Border>
-            <Border Grid.Column="0" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                <Image Source="img\Terre.png"/>
-            </Border>
-            <Border Grid.Column="0" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                <Image Source="img\Terre.png"/>
-            </Border>
-            <Border Grid.Column="1" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                <Image Source="img\Terre.png"/>
-            </Border>
-            <Border Grid.Column="1" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                <Image Source="img\Terre.png"/>
-            </Border>
-            <Border Grid.Column="1" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                <Image Source="img\Terre.png"/>
-            </Border>
-            <Border Grid.Column="2" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                <Image Source="img\Terre.png"/>
-            </Border>
-            <Border Grid.Column="2" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                <Image Source="img\Terre.png"/>
-            </Border>
-            <Border Grid.Column="2" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                <Image Source="img\Terre.png"/>
-            </Border>
 
-        </Grid>
+
+
+
+        <StackPanel Background="#C3C3C3" Orientation="Horizontal">
+                <Grid Background="Gray" Margin="10" VerticalAlignment="Center">
+                <Grid.Resources>
+                    <SolidColorBrush x:Key="brush" Color="#C5C5C5"/>
+                    <Style TargetType="Image">
+                        <Setter Property="Width" Value="70"/>
+                    </Style>
+                </Grid.Resources>
+                <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="80"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="80"/>
+                        <RowDefinition Height="80"/>
+                        <RowDefinition Height="80"/>
+                    </Grid.RowDefinitions>
+                    <Border Grid.Column="0" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
+                        <Image Source="img\Terre.png"/>
+                    </Border>
+                    <Border Grid.Column="0" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
+                        <Image Source="img\Terre.png"/>
+                    </Border>
+                    <Border Grid.Column="0" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
+                        <Image Source="img\Terre.png"/>
+                    </Border>
+                    <Border Grid.Column="1" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
+                        <Image Source="img\Terre.png"/>
+                    </Border>
+                    <Border Grid.Column="1" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
+                        <Image Source="img\Terre.png"/>
+                    </Border>
+                    <Border Grid.Column="1" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
+                        <Image Source="img\Terre.png"/>
+                    </Border>
+                    <Border Grid.Column="2" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
+                        <Image Source="img\Terre.png"/>
+                    </Border>
+                    <Border Grid.Column="2" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
+                        <Image Source="img\Terre.png"/>
+                    </Border>
+                    <Border Grid.Column="2" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
+                        <Image Source="img\Terre.png"/>
+                    </Border>
+
+                </Grid>
+              
+
+
+
 
         <Image Source="img\flecheCraft.png" Width="100" Margin="10"/>
 
@@ -60,5 +68,4 @@
             <Image Source="img\Terre.png" Margin="5"/>
         </Border>
     </StackPanel>
-
 </UserControl>
