--- a/MC-Dex/pageObjet.xaml
+++ b/MC-Dex/pageObjet.xaml
@@ -36,7 +36,8 @@
 
         <local:home DockPanel.Dock="Right" Width="250" Margin="0,12"/>
 
-        <Border CornerRadius="12" Background="#BA0E0D0D" Margin="40,20,0,20" DockPanel.Dock="Left">
+        <ScrollViewer VerticalScrollBarVisibility="Hidden">
+            <Border CornerRadius="12" Background="#BA0E0D0D" Margin="40,20,0,20" DockPanel.Dock="Left">
             <StackPanel>
                 <Grid Margin="20">
                     <Grid.ColumnDefinitions>
@@ -65,7 +66,7 @@
 
             </StackPanel>
         </Border>
-        
+       </ScrollViewer>
     </DockPanel>
     
     
