--- a/MC-Dex/MainWindow.xaml
+++ b/MC-Dex/MainWindow.xaml
@@ -6,8 +6,12 @@
         xmlns:local="clr-namespace:MC_Dex"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
     
-    
+    <Window.Resources>
+
+    </Window.Resources>
+
     <DockPanel>
         <DockPanel.Background>
             <ImageBrush ImageSource="/img/background2.png"/>
