--- a/MC-Dex/itemUC.xaml
+++ b/MC-Dex/itemUC.xaml
@@ -13,8 +13,8 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-            <Image Grid.Column="0" Source="img\Terre.png" Height="50" Width="50" Margin="20,1"/>
-            <TextBlock Grid.Column="1" Text="Terre" FontFamily="Minecraft" Foreground="#C5C5C5" FontSize="25" VerticalAlignment="Center" TextWrapping="Wrap"/>
+            <Image x:Name="SrcImg" Grid.Column="0" Source="img\Terre.png" Height="50" Width="50" Margin="20,1"/>
+            <TextBlock x:Name="NomItem" Grid.Column="1" Text="Nom item" FontFamily="Minecraft" Foreground="#C5C5C5" FontSize="25" VerticalAlignment="Center" TextWrapping="Wrap"/>
         </Grid>
     </Border>
 
