--- a/MC-Dex/pageObjet.xaml
+++ b/MC-Dex/pageObjet.xaml
@@ -20,7 +20,7 @@
             <Setter Property="FontFamily" Value="Minecraft"/>
             <Setter Property="FontSize" Value="22"/>
             <Setter Property="Foreground" Value="#C5C5C5"/>
-            <Setter Property="TextDecorations" Value="Underline"/>
+            <Setter Property="FontWeight" Value="Bold"/>
         </Style>
         <Style TargetType="TextBlock" x:Key="texte_partie">
             <Setter Property="TextWrapping" Value="Wrap"/>
@@ -29,6 +29,7 @@
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="Foreground" Value="White"/>
         </Style>
+        
     </UserControl.Resources>
 
     <DockPanel>
@@ -58,13 +59,63 @@
 
                 <Rectangle Width="Auto" Height="2" Fill="White" Margin="15,5"/>
 
-                <TextBlock Text="Description" Style="{StaticResource titre_partie}"/>
+                    <!--<TextBlock Text="Description" Style="{StaticResource titre_partie}"/>
                 <TextBlock Style="{StaticResource texte_partie}" Text="Voici un exemple de description type qu'il pourrait y avoir."/>
 
-                <TextBlock Text="Craft" Style="{StaticResource titre_partie}"/>
-                <local:craftUC Margin="20,15,20,7" />
+                    <TextBlock Text="Craft" Style="{StaticResource titre_partie}"/>
+                    <local:craftUC Margin="20,15,20,7" ImageName4="img\Planche.png" ImageName6="img\Planche.png"
+                                   ImageName7="img\Planche.png" ImageName8="img\Planche.png" ImageName9="img\Planche.png" ImageName10="img\Bateau.png"/>
+-->
+                
+                    <TextBlock Text="Statistiques" Style="{StaticResource titre_partie}"/>
+                    <Grid Margin="20,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Grid.Resources>
+                            <SolidColorBrush x:Key="brush" Color="#C5C5C5"/>
+                            <Style TargetType="Image">
+                                <Setter Property="Width" Value="60"/>
+                            </Style>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="Margin" Value="20,5"/>
+                                <Setter Property="FontFamily" Value="Minecraft"/>
+                                <Setter Property="FontSize" Value="16"/>
+                                <Setter Property="Foreground" Value="White"/>
+                            </Style>
+                        </Grid.Resources>
 
-            </StackPanel>
+                        <Border Grid.Column="0" Grid.Row="0"  BorderBrush="{StaticResource brush}" BorderThickness="0,0,1,1">
+                            <TextBlock Text="Durete" Grid.Column="0"/>
+                        </Border>
+                        <Border Grid.Column="1" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="1,0,0,1">
+                            <TextBlock Text="3.5" Grid.Column="1"/>
+                        </Border>
+
+                        <Border Grid.Column="0" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="0,1,1,1">
+                            <TextBlock Text="Durete" Grid.Column="0"/>
+                        </Border>
+                        <Border Grid.Column="1" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="1,1,0,1">
+                            <TextBlock Text="3.5" Grid.Column="1"/>
+                        </Border>
+
+                        <Border Grid.Column="0" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="0,1,1,0">
+                            <TextBlock Text="Durete" Grid.Column="0"/>
+                        </Border>
+                        <Border Grid.Column="1" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="1,1,0,0">
+                            <TextBlock Text="3.5" Grid.Column="1"/>
+                        </Border>
+                    </Grid>
+
+
+
+                </StackPanel>
         </Border>
        </ScrollViewer>
     </DockPanel>
